<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.personal.gallery</groupId>
        <artifactId>auto-suggest-pro</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>suggester</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>suggester</name>
    <description>suggester</description>
    <properties>
        <java.version>17</java.version>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
